Added image & animation of PER

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Christmas Countdown For fun!">
+    <meta name="author" content="Perderp">
     <title>Christmas Countdown</title>
     <link rel="icon" type="image/x-icon" href="./public/images/favicon.png">
     <link rel="stylesheet" href="./public/css/index.css">
@@ -18,7 +20,8 @@
     <section class="countdown">
         <div id="particles-js" class="particle"></div>
         <div class="countdown__overlay">
-            <img src="./public/images/cis_padre.png" alt="Cis_padre" class="cis">
+            <img src="./public/images/cis_padre.png" alt="cis_padre" class="cis">
+            <img src="./public/images/per_monk.png" alt="per_monk" class="per">
         </div>
         <div class="l-wrap">
             <div class="l-container countdown__inner u-d-f">
