New: New-Year Countdown, Removed per-monk, JS adjust to new-year

--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
         <div id="particles-js" class="particle"></div>
         <div class="countdown__overlay">
             <img src="./public/images/cis_padre.png" alt="cis_padre" class="cis">
-            <img src="./public/images/per_monk.png" alt="per_monk" class="per">
         </div>
         <div class="l-wrap">
             <div class="l-container countdown__inner u-d-f">
                 <div class="countdown__top">
-                    Christmas Countdown
+                    New Year Countdown
                 </div>
                 <div class="countdown__bottom u-d-f">
                     <div class="days">
                         <div class="days__top"></div>
                         <div class="days__bottom">
-                            DAYS
+                            DAYS 
                         </div>
                     </div>
 
